# cpp-yandex-book

./: .gitignore  2_3_E.cpp  2_3_F.cpp  2_3_G.cpp  2_4_B_soundex.cpp  2_4_C_permutation.cpp  2_4_D_downsort.cpp  2_4_E_palindrome.cpp  2_4_F_miner.cpp  2_4_F_miner.test.cpp  2_4_F_miner.test1.txt  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  develop.profile  pyproject.toml  vector.cpp
src/2_7_A_ArgMax/: ArgMax.cpp  ArgMax.h  CMakeLists.txt
src/2_7_A_ArgMax/.test/: ArgMax.test.cpp
src/2_7_B_CommonPrefix/: CMakeLists.txt  CommonPrefix.cpp  CommonPrefix.h
src/2_7_B_CommonPrefix/.test/: CommonPrefix.test.cpp
src/2_7_C_Split/: CMakeLists.txt  Split.cpp  Split.h
src/2_7_C_Split/.test/: Split.cpp  Split.test.cpp
src/2_7_D_Join/: CMakeLists.txt  Join.cpp  Join.h
src/2_7_D_Join/.test/: Join.test.cpp
src/2_7_E_Transpose/: CMakeLists.txt  Transpose.cpp  Transpose.h
src/2_7_E_Transpose/.test/: Transpose.test.cpp
src/2_7_F_PointSort/: CMakeLists.txt  PointSort.cpp  PointSort.h
src/2_7_F_PointSort/.test/: PointSort.test.cpp
src/3_1_B_exam/: CMakeLists.txt  Exam.cpp  Exam.h
src/3_1_B_exam/.test/: Exam.test.cpp
src/3_1_C_train/: CMakeLists.txt  Train.cpp  Train.h
src/3_1_C_train/.test/: train.test.cpp
src/cpp-concepts/: CMakeLists.txt  container.test.cpp  vector.test.cpp
